test/extern/ferguson/mismatch-errors/mismatch-rvi-v.good
mismatch-rvi-v.chpl:4: error: extern proc does not match C declaration
